# torch-export-research

./: .gitignore  BalancedTensorParallel_blueprint.py  README.md  TensorParallel_blueprint.py  analyze_models.py  architecture_only_export.py  baseline_AdSGD.py  baseline_DynamicW.py  baseline_NoT.py  baseline_cuda_granite_3_2b_instruct.py  baseline_static_profiling.py  benchmark_framework.py  compare_LlaMA7b_Granite2b.py  compile_Granite.py  config.json  dynamic_export_benchmark.py  dynamic_nn_export.py  dynamic_seq_length.py  dynamic_weight_injection_benchmark.py  export1.py  export2.py  export3Wrapped.py  export4tensorPacking.py  export5PackingDict.py  exportGWeights.py  export_benchmark.py  export_inference_times_1b_llama.csv  export_inference_times_7b_llama.csv  export_inference_times_granite3.csv  export_times_llama7b.csv  granite_wrapper_dynamicInput.py  inject_inference_times_1b_llama.csv  inject_inference_times_7b_llama.csv  inject_inference_times_granite.csv  inject_weights_dynamically.py  llama7b_FMS_DYNAMIC.py  llama7b_FMS_STATIC.py  load_huggyllama.py  plot_times_architecture.py  plot_times_baseline.py  (+4 more)
demos/: 11_8_2024_Project_3_Update.ipynb
demos/Weeks1_2/tut1/: CMakeLists.txt
results/: TinyLlama_DynamicExportBenchmark_results.csv  export_dynamic_sql_llama7b.csv  export_inference_granite3.csv  export_inference_times_1b_llama.csv  export_inference_times_7b_llama.csv  gpt2_ExportBenchmark_results.csv  gpt2_WeightInjectionBenchmark_results.csv  inject_inference_time_llama_7b.csv  inject_inference_times_granite3.csv  inject_inference_times_llama_1b.csv
(+23 files in other folders)
